Bug 451359 - Can not wake up device with walcom tablet pen
Summary: Can not wake up device with walcom tablet pen
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.24.3
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 483377 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-03-10 09:18 UTC by Moritz
Modified: 2024-06-25 12:58 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Moritz 2022-03-10 09:18:42 UTC
SUMMARY
I have no clue, if this is kwin specific, but it probably is. I could be wrong, please tell me where to open the isse or move it please.

When the screen is turned off (either via power button or just waiting some minutes) I can easily turn it on with the keyboard or the mouse, but not with the pen.


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 5.24.3 (neon unstable)
KDE Plasma Version: 5.24.3
KDE Frameworks Version: 5.92
Qt Version: 5.15.3

ADDITIONAL INFORMATION

I am on wayland.
Comment 1 Nate Graham 2022-03-25 03:33:34 UTC
On Wayland I can only wake up my laptop by pressing the power button. This may be a device-specific power management or kernel thing, not a KWin thing.
Comment 2 Moritz 2022-03-30 09:49:49 UTC
Maybe waykeup is not the correct word. I mean turning the screen on.
I can turn on my laptop when moving the cursor (mouse or touchpad) or pressing keys or pressing the power button.
I can wake up pmy device when pressing any key or the power button.


I should be abke ti turn on the screen when moving the cursor with the pen.

I don't know if it is to kwin, but it could be, it is the display manager?
Comment 3 Bug Janitor Service 2024-06-13 15:14:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5897
Comment 4 David Redondo 2024-06-14 07:05:21 UTC
Git commit c2141dc4efac6e7c51815aa57272b5537e60f101 by David Redondo.
Committed on 14/06/2024 at 06:54.
Pushed by davidre into branch 'master'.

Also wake up screens on tablet interactions
FIXED-IN:6.1.1

M  +37   -0    src/dpmsinputeventfilter.cpp
M  +5    -0    src/dpmsinputeventfilter.h

https://invent.kde.org/plasma/kwin/-/commit/c2141dc4efac6e7c51815aa57272b5537e60f101
Comment 5 David Redondo 2024-06-14 07:18:52 UTC
Git commit 6745be3092882ea8dff05814217445a66ef6bd80 by David Redondo.
Committed on 14/06/2024 at 07:05.
Pushed by davidre into branch 'Plasma/6.1'.

Also wake up screens on tablet interactions
FIXED-IN:6.1.1


(cherry picked from commit c2141dc4efac6e7c51815aa57272b5537e60f101)

Co-authored-by: David Redondo <kde@david-redondo.de>

M  +37   -0    src/dpmsinputeventfilter.cpp
M  +5    -0    src/dpmsinputeventfilter.h

https://invent.kde.org/plasma/kwin/-/commit/6745be3092882ea8dff05814217445a66ef6bd80
Comment 6 Zamundaaa 2024-06-25 12:58:14 UTC
*** Bug 483377 has been marked as a duplicate of this bug. ***