Also wake up screens on tablet interactions

BUG:451359
FIXED-IN:6.1.1